@@ -3,6 +3,7 @@ Changelog for TIGCC-FrontEnd For Linux
 - 2006-07-16, version 1.3.2 (Kevin Kofler)
         * Pass --no-names to ar-tigcc to match Win32 tigcc.exe behavior.
         * Use --outputbin-main-only, not --outputbin, when linking a PPG.
+        * Fixed multiple uses of -Wa or -WA (fixes pedrom-ld-tigcc build).
 
 - 2005-10-02, version 1.3.1 (Kevin Kofler)
         * Now handling -isystem correctly.
